Fix revew carousel on mobile/safari (the centering technique I used didn't render correctly in safar.

--- a/_sass/index.scss
+++ b/_sass/index.scss
@@ -797,8 +797,7 @@ a {
 
   .review::before {
     content: '';
-    display: inline-block;
-    height: 100%;
+    display: inline;
     vertical-align: middle;
   }
 
@@ -1053,13 +1052,6 @@ a {
     z-index: 2;
   }
 
-  .review::before {
-    content: '';
-    display: inline-block;
-    height: 100%;
-    vertical-align: middle;
-  }
-
   .review img {
     display: block;
   }
@@ -1071,7 +1063,7 @@ a {
 
   .review-carousel {
     .slick-track {
-      height: 350px;
+      height: 375px;
     }
   }
 
